# corda

./: .dockerignore  .gitignore  .gitmodules  .mailmap  .snyk  .travis.yml  BUILD.md  BUILD_ENV_PARAMETERS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Corda Network.md  Dockerfile  Jenkinsfile  LICENCE  LICENSE  License.txt  Makefile  README.md  SECURITY.md  TMP_GIT_LOG  TOUCHME  TRADEMARK  android-patches.diff  android.pro  baseline.xml  build-light.ing.sh  build.gradle  buildCacheSettings.gradle  buildenv.mk  constants.properties  detekt-baseline-config.yml  detekt-baseline.xml  detekt-config.yml  deterministic.gradle  docker-build.sh  download_prebuilt.sh  gradle.properties  graphs.gradle  integration.yaml  (+19 more)
experimental/cordacpp/: CMakeLists.txt  README.md  build.gradle  corda-core.h  corda-std-serializers.h  corda.cpp  corda.h  main.cpp  main.h
experimental/cordacpp/include/: all-messages.h
experimental/cpp-serializer/: .gitignore  CMakeLists.txt  README.md  lines  rem_cmake
experimental/cpp-serializer/include/: CompositeFactory.h  ICompositeFactory.h  colours.h  debug.h  types.h
experimental/cpp-serializer/include/amqp/: AMQPDescribed.h  AMQPHeader.h  ICompositeFactory.h
experimental/cpp-serializer/include/serialiser/: Serialiser.h
experimental/cpp-serializer/libs/: CMakeLists.txt
experimental/cpp-serializer/libs/amqp/: CMakeLists.txt
experimental/cpp-serializer/libs/proton-wrapper/: CMakeLists.txt
experimental/cpp-serializer/src/: CMakeLists.txt
experimental/cpp-serializer/src/amqp/: AMQPDescribed.h  AMQPDescriptor.h  CMakeLists.txt  CompositeFactory.cxx  CompositeFactory.h
experimental/cpp-serializer/src/proton/: CMakeLists.txt  proton_wrapper.cxx  proton_wrapper.h
experimental/cpp-serializer/src/serialiser/: Composite.h  Makefile  ProtonReader.h  cmake_install.cmake
sgx-jvm/avian/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  android.pro  corda.pro  makefile  openjdk-src.mk  openjdk.pro  settings.gradle  vm.pro
sgx-jvm/avian/classpath/: java-io.cpp  java-lang.cpp  java-nio.cpp  java-util-zip.cpp  java-util.cpp  jni-util.h  sockets.h
sgx-jvm/avian/classpath/avian/: Addendum.java  AnnotationInvocationHandler.java  Assembler.java  Atomic.java  Callback.java  Cell.java  Classes.java  Code.java  ConstantPool.java  Continuations.java  Data.java  FieldAddendum.java  FormatString.java  Function.java  IncompatibleContinuationException.java  InnerClassReference.java  Iso88591.java  LegacyObjectInputStream.java  LegacyObjectOutputStream.java  Machine.java  MethodAddendum.java  Pair.java  PersistentSet.java  Singleton.java  (+7 more)
sgx-jvm/avian/docker/: Dockerfile  build.sh
sgx-jvm/avian/openjdk-patches/: Inet4AddressImpl.c.8.patch  Inet6AddressImpl.c.8.patch  java_props_md.c.8.windows.patch
sgx-jvm/avian/src/: boot.cpp  bootimage-fields.cpp  builtin.cpp  classpath-android.cpp  classpath-avian.cpp  classpath-openjdk.cpp  compile-arm.S  compile-arm.masm  compile-arm64.S  compile-i386.masm  compile-x86_64.S  compile.cpp  continuations-x86.S  debug-util.cpp  debug-util.h  embed.cpp  embedded-loader.cpp  heapdump.cpp  heapwalk.cpp  i386.S  i386.masm  jnienv.cpp  lzma-decode.cpp  lzma-encode.cpp  machine.cpp  process.cpp  thunks.cpp  types.def  util.cpp  x86_64.S
sgx-jvm/avian/test/: ArraysTest.java  BitsetTest.java  BufferedInputStreamTest.java  Buffers.java  Collections.java  DequeHelper.java  EnumSetTest.java  Exceptions.java  Files.java  Floats.java  FormatStrings.java  FutureTaskTest.java  Integers.java  InvokeDynamic.java  LazyLoading.java  LinkedBlockingQueueTest.java  List.java  Logging.java  Longs.java  MemoryRamp.java  Misc.java  NullPointer.java  Observe.java  Reflection.java  Serialize.java  StackOverflow.java  Strings.java  ThreadExceptions.java  Threads.java  TimeUnitConversions.java  Tree.java  UnsafeTest.java  UrlTest.java  ci.sh  jni.cpp
sgx-jvm/avian/unittest/: test-harness.cpp  test-harness.h
sgx-jvm/jvm-enclave/common/: CMakeLists.txt  elf_types.h  enclave_map.cpp  enclave_map.h  enclave_metadata.cpp  enclave_metadata.h  sgx_thread_completion.h  sgx_thread_mutex_guard.h  sgx_types.h  sgx_utilities.cpp  sgx_utilities.h  untrusted_debug_print.cpp  untrusted_start_thread.cpp
sgx-jvm/jvm-enclave/enclave/: CMakeLists.txt  aex_assert.h  create-boot-jar.sh  dispatch_table.cpp.template  enclave.cpp  enclave.xml  enclave_start_thread.cpp  enclave_start_thread.h  gen-stubsyms.sh  gen_dispatch_table.py  linkerscript.lds  os_support.cpp  proguard.pro  sgx_thread_completion.cpp  stubsyms.cpp
sgx-jvm/jvm-enclave/jni/: CMakeLists.txt  jni_sgx_api.cpp
sgx-jvm/jvm-enclave/standalone/: CMakeLists.txt  main.cpp
sgx-jvm/noop-enclave/: CMakeLists.txt  IntelWhitelistFormInstructions.md  Makefile  README.md  build_in_image.sh  enclave-debug.xml  linkerscript.lds
sgx-jvm/noop-enclave/src/: empty.edl  noop_enclave.cpp  test.cpp
sgx-jvm/simple-enclave/: CMakeLists.txt  Makefile  README.md  enclave-debug.xml  enclave-release.xml  from_clean.sh  linkerscript.lds
sgx-jvm/simple-enclave/src/: sgx_error_list.h  simple.edl  simple_enclave.cpp  test.cpp
src/codegen/: CMakeLists.txt  assembler.h  compiler.cpp  compiler.h  lir-ops.inc.cpp  lir.cpp  regalloc.cpp  regalloc.h  registers.cpp  runtime.cpp  targets.cpp  targets.h
src/codegen/arm/: assembler.cpp  block.h  context.h  fixup.cpp  fixup.h  multimethod.h
src/codegen/compiler/: context.cpp  context.h  event.cpp  event.h  frame.cpp  frame.h  ir.cpp  ir.h  promise.cpp  promise.h  read.cpp  read.h  regalloc.cpp  regalloc.h  resource.cpp  resource.h  site.cpp  site.h  stack.h  value.cpp  value.h
src/codegen/powerpc/: assembler.cpp  context.cpp  encode.h  fixup.cpp  fixup.h  operations.cpp
src/codegen/x86/: assembler.cpp  block.cpp  block.h  context.cpp  context.h  detect.cpp  detect.h  encode.cpp  encode.h  fixup.cpp  fixup.h  multimethod.cpp  multimethod.h  operations.cpp  operations.h  padding.cpp  padding.h
unittest/: CMakeLists.txt  test-harness.cpp  test-harness.h
unittest/codegen/: assembler-test.cpp  registers-test.cpp
unittest/util/: arg-parser-test.cpp
(+14563 files in other folders)
